public class MyAdventure {
    public static void main(String[] args) {
        Game game = new Game();
        game.play();
    }
}
